--- a/index.html
+++ b/index.html
@@ -12,59 +12,50 @@
     <div class="container">
         <div class="imagecontainer">
             <div class="logo">
-                Logo!
+                <svg class="logoimage" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
+                <p class="text-logo">Home</p>
             </div>
             <div class="credit">
                 Image from Jakub Novacek via Pexels
             </div>
         </div>
         <div class="formcontainer">
-            <div class="text-welcome">
-                The icosohedron controls your life, your destiny, your everything. Submit to the icosohedron.
+            <div class="text welcome">
+                This isn't a real website. But you knew that already, right? You might as well fill in this form while you're here, though.
             </div>
             <div class="formbox">
-                <h1>Fill in your details</h1>
-                <form class="form-actual" method="post">
+                <h1 class="text calltoaction">Fill in your details</h1>
+                <form class="form-actual" action="http://httpbin.org/post" method="post" id="form">
                     <div class="formseparator">
-                        <label for="firstname">First Name:</label>
-                        <input type="text" id="firstname" name="firstname">
+                        <label class="text label" for="firstname">First Name:</label>
+                        <input class="input standard" type="text" id="firstname" name="firstname">
                     </div>
                     <div class="formseparator">
-                        <label for="lastname">Last Name:</label>
-                        <input type="text" id="firstname">
+                        <label class="text label" for="lastname">Last Name:</label>
+                        <input class="input standard" type="text" id="lastname" name="lastname">
                     </div>
                     <div class="formseparator">
-                        <label for="othername">Someone Else's Name:</label>
-                        <input type="text" id="firstname">
+                        <label class="text label" for="email">Email Address:</label>
+                        <input class="input standard" type="email" id="email" name="email">
                     </div>
                     <div class="formseparator">
-                        <label for="email">Email Address:</label>
-                        <input type="text" id="firstname">
+                        <label class="text label" for="phone">Phone Number:</label>
+                        <input class="input standard" type="number" id="phone" name="phone">
                     </div>
                     <div class="formseparator">
-                        <label for="phone">Phone Number:</label>
-                        <input type="text" id="firstname">
+                        <label class="text label" for="password">Password:</label>
+                        <input class="input password" type="password" id="password" name="password">
                     </div>
                     <div class="formseparator">
-                        <label for="randomnumber">Random Number:</label>
-                        <input type="text" id="firstname">
-                    </div>
-                    <div class="formseparator">
-                        <label for="password">Password:</label>
-                        <input type="text" id="firstname">
-                    </div>
-                    <div class="formseparator">
-                        <label for="passwordconfirmone">Confirm Password:</label>
-                        <input type="text" id="firstname">
-                    </div>
-                    <div class="formseparator">
-                        <label for="passwordconfirmtwo">Confirm Password Again for Some Reason:</label>
-                        <input type="text" id="firstname">
+                        <label class="text label" for="passwordconfirmone">Confirm Password:</label>
+                        <input class="input password" type="password" id="passwordconfirmone" name="passwordconfirmone">
                     </div>
                 </form>
             </div>
             <div class="bottompanel">
-                <button type="submit">Submit. Submit!</button>
+                <button type="submit" form="form">Create Account</button>
+                <p class="text login">Already have an account? That's impossible. But if you somehow do...</p>
+                <button type="login">Log in</button>
             </div>
         </div>
     </div>
