--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="formbox">
                 <h1 class="text calltoaction">Fill in your details</h1>
-                <form class="form-actual" action="http://httpbin.org/post" method="post" id="form">
+                <form class="form-actual" method="post" id="form" onsubmit="checkPassword()">
                     <div class="formseparator">
                         <label class="text label" for="firstname">First Name:</label>
                         <input class="input standard" type="text" id="firstname" name="firstname">
