--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="container">
         <div class="imagecontainer">
             <div class="logo">
-                <svg class="logoimage" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
-                <p class="text-logo">Home</p>
+                <svg class="logoimage logoitem" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
+                <p class="text-logo logoitem">Home</p>
             </div>
             <div class="credit">
-                Image from Jakub Novacek via Pexels
+                Image from Emre Can Acer via Pexels
             </div>
         </div>
         <div class="formcontainer">
