Altered font sizes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="formcontainer">
             <div class="text welcome">
-                This isn't a real website. But you knew that already, right? You might as well fill in this form while you're here, though.
+                <p class = "text welcome">This isn't a real website. But you knew that already, right? You might as well fill in this form while you're here, though.</p>
             </div>
             <div class="formbox">
                 <h1 class="text calltoaction">Fill in your details</h1>
